infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qythera-service
spec:
  selector:
    app: qythera-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
